[tool.poetry]
name = "shap-anomaly-diagnosis"
version = "0.1.0"
description = ""
authors = ["Hirofumi Tsuruta"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
shappack = "^0.1.1"
sklearn = "^0.0"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.7"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
